kubernetes/apps/databases/qdrant/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qdrant
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - qdrant.iacob.uk
  rules:
    - backendRefs:
        - name: qdrant
          port: 6333
