kubernetes/apps/databases/qdrant/app/metrics-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qdrant-metrics
  namespace: databases
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qdrant
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: '6333'
        protocol: TCP
      rules:
        http:
        - method: GET
          path: /metrics
